--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,11 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
+  <scm>
+    <developerConnection>scm:git:git@https://github.com/libiao5320/RXJAVA_.git/
+    </developerConnection>
+  </scm>
+
 
   <dependencies>
     <dependency>
@@ -17,6 +22,20 @@
       <version>1.0.2</version>
     </dependency>
   </dependencies>
+
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.9.5</version>
+        <configuration>
+          <connectionType>developerConnection</connectionType>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
 
 </project>
