--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
   <packaging>pom</packaging>
 
   <scm>
-    <developerConnection>scm:git:git@https://github.com/libiao5320/RXJAVA_.git/
+    <developerConnection>
+      scm:git:git@https://github.com/libiao5320/RXJAVA_.git
     </developerConnection>
   </scm>
 
