--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,24 @@
           <connectionType>developerConnection</connectionType>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.2</version>
+        <configuration>
+          <tagBase>svn://127.0.0.1/javadev/testapp/tags/</tagBase>
+          <branchBase>svn://127.0.0.1/javadev/testapp/branches</branchBase>
+          <tagNameFormat>@{version}</tagNameFormat>
+          <username>${scm.username}</username>
+          <password>${scm.password}</password>
+          <checkModificationExcludes>
+            <checkModificationExclude>.project</checkModificationExclude>
+            <checkModificationExclude>.settings</checkModificationExclude>
+            <checkModificationExclude>.classpath</checkModificationExclude>
+          </checkModificationExcludes>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
