--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
   <groupId>com.woreader.rxjava</groupId>
   <artifactId>rxjava</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <scm>
     <developerConnection>scm:git:https://github.com/libiao5320/RXJAVA_.git
     </developerConnection>
-    <tag>0.0.1</tag>
+    <tag>0.0.2</tag>
   </scm>
 
 
