--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.woreader.rxjava</groupId>
   <artifactId>rxjava</artifactId>
-  <version>0.0.2</version>
-  <packaging>pom</packaging>
+  <version>0.0.2-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <scm>
-    <developerConnection>scm:git:https://${scm.username}:${scm.password}@github.com/libiao5320/RXJAVA_.git
+    <developerConnection>
+      scm:git:https://libiao5320:nande1jian@github.com/libiao5320/RXJAVA_.git
     </developerConnection>
     <tag>0.0.2</tag>
   </scm>
