--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <developerConnection>
       scm:git:https://libiao5320:nande1jian@github.com/libiao5320/RXJAVA_.git
     </developerConnection>
-    <tag>0.0.2</tag>
+    <tag>0.0.7</tag>
   </scm>
 
 
@@ -73,8 +73,8 @@
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>2.9.1</version>
         <configuration>
-          <charset>UTF-8</charset>
-          <docencoding>UTF-8</docencoding>
+          <charset>GBK</charset>
+          <docencoding>GBK</docencoding>
         </configuration>
         <executions>
           <execution>
