--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
   </scm>
 
 
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+
   <dependencies>
     <dependency>
       <groupId>io.reactivex</groupId>
