--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
   <groupId>com.woreader.rxjava</groupId>
   <artifactId>rxjava</artifactId>
-  <version>0.0.9</version>
+  <version>0.0.10-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <scm>
     <developerConnection>
       scm:git:https://${scm.username}:${scm.password}@github.com/libiao5320/RXJAVA_.git
     </developerConnection>
-    <tag>0.0.9</tag>
+    <tag>0.0.8</tag>
   </scm>
 
 
