--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
 
 
   <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>5.0.0.Alpha2</version>
+    </dependency>
+
     <dependency>
       <groupId>io.reactivex</groupId>
       <artifactId>rxjava</artifactId>
