--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.38</version>
     </dependency>
+    <dependency>
+      <groupId>com.rabbitmq</groupId>
+      <artifactId>amqp-client</artifactId>
+      <version>3.4.1</version>
+    </dependency>
 
 
     <dependency>
